--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.0.2",
     "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "d3": "^3.5.17",
+    "date-fns": "^2.0.0-alpha.21",
+    "firebase": "^5.8.2",
+    "material-ui-pickers": "^2.1.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-firebaseui": "^3.1.2",
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "sport-stats": "git+https://github.com/alexadam/sport-stats.git"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
