--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@material-ui/icons": "^3.0.2",
     "d3": "^3.5.17",
     "date-fns": "^2.0.0-alpha.21",
+    "dotenv": "^6.2.0",
     "firebase": "^5.8.2",
     "material-ui-pickers": "^2.1.2",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-firebaseui": "^3.1.2",
