--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "firebase-tools": "^6.3.1"
+    "firebase-tools": "^6.3.1",
+    "lodash": "^4.17.11"
   }
 }
